# personal-finance

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
locale/en/LC_MESSAGES/: django.po
locale/vi/LC_MESSAGES/: django.po
personal_finance/: asgi.py  settings.py  urls.py  wsgi.py
pf_account/: apps.py  models.py
pf_account/migrations/: 0001_initial.py
pf_accounting/: apps.py  models.py
pf_budget/: apps.py  models.py
pf_wallet/: apps.py  models.py
templates/: base.html
